--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,28 +12,31 @@ jobs:
           - { runner: 'macos-latest', type: 'macos', architecture: 'arm64', triplet: 'arm64-osx' }
     runs-on: ${{ matrix.os.runner }}
     steps:
+      - name: Install system dependencies
+        if: ${{ matrix.os.type == 'ubuntu' }}
+        run: |
+          sudo apt-get install libxi-dev libxtst-dev libxrandr-dev
+          sudo apt install libx11-dev libxft-dev libxext-dev
+          sudo apt-get install libwayland-dev libxkbcommon-dev libegl1-mesa-dev libgles2-mesa-dev
+          sudo apt-get install linux-libc-dev
       - uses: actions/checkout@v4
-      - name: Build dependencies
-        uses: johnwason/vcpkg-action@v6
-        id: vcpkg
         with:
-          pkgs: wxwidgets boost-algorithm boost-random boost-test boost-multi-array boost-property-tree boost-program-options spdlog fmt
-          triplet: ${{ matrix.os.triplet }}
-          token: ${{ github.token }}
-          github-binarycache: true
+          submodules: true
+      - uses: lukka/get-cmake@latest
+      - name: Setup vcpkg
+        uses: lukka/run-vcpkg@v11
+        id: vcpkg
       - name: Build
         run: |
           mkdir build
           cd build
-          cmake -DCMAKE_BUILD_TYPE=Release ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} ..
+          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=${{ steps.vcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=${{ matrix.os.triplet }} ..
           cmake --build . --config Release --target MWGroundcoverGenerator
           cmake --build . --config Release --target MWGroundcoverGeneratorCLI
       - name: Run tests
         if: ${{ matrix.os.type == 'ubuntu' || matrix.os.type == 'macos'  }}
         run: |
-          mkdir test
-          cd test
-          cmake ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} ../
+          cd build
           make MWGroundcoverGeneratorTests
           CTEST_OUTPUT_ON_FAILURE=1 make test
 
@@ -74,7 +77,7 @@ jobs:
         if: ${{ matrix.os.type == 'macos' }}
         run: |
           cp -r build/MWGroundcoverGenerator.app release
-          cp -r release_cli/MWGroundcoverGeneratorCLI release/cli
+          cp -r build/MWGroundcoverGeneratorCLI release/cli
 
       - name: Upload release artifacts
         uses: actions/upload-artifact@v4
@@ -82,9 +85,3 @@ jobs:
           name: 'mw-groundcover-generator-${{ matrix.os.type }}-${{ matrix.os.architecture }}'
           path: release/
           if-no-files-found: error
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: 'build-artifacts-${{ matrix.os.type }}-${{ matrix.os.architecture }}'
-          path: build/
-          retention-days: 1
