[chore] Improve documentation

--- a/docs/documented_configuration_example.ini
+++ b/docs/documented_configuration_example.ini
@@ -2,8 +2,7 @@
 
 [global] ; Optional, special section with values that apply to all placed objects.
 
-; Applies a modifier to the z (vertical) position of all generated meshes.
-; Ideally don't change this, as some tools in this program assume that this will be between 10 and 12
+; Applies a fixed delta to the z (vertical) position of all placed objects.
 iZPositionModifier=10 ; Optional, default 10
 
 ; Prefix of any created Static object
